test/scc/decl/semantic-errors/071.t
void test(extern int a)
{
}